[AI] feat: 增加播放器场景与自动启动
